Fix content settings for hosted apps not displayed correctly after change from http://crrev.com/2525943002. I also changed GetChooserExceptionForPage() to have a displayName to be consistent with the other exception objects.

BUG=671547

Review-Url: https://codereview.chromium.org/2577043002
Cr-Commit-Position: refs/heads/master@{#439757}

Former-commit-id: 83f0c6183d9cdbad6ec74a55dae7d855a5860791